Thu Jun 10 17:41:40 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am: add gtkgamelist.c

Thu Jun  10  14:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgamelist.c, gnubg.gtkrc: Multiple styles and new defaults for game list

Wed Jun  9  14:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgamelist.c, gnubg.gtkrc: Get game list colours from gtkrc file

Tue Jun  8  8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkgamelist.c: Colour mistakes in game list

Mon Jun  7  8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Remove keyboard focus from game window, fix minor bug
	with new right click menu.
	* gnubg.c: Empty board on startup (try #2)

Sun Jun  6 18:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c: Empty board on startup
	* gtkboard.c: Close hint window when editing
	* import.c: Ignore empty lines in mat import

Fri Jun  4 22:58:22 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* eval.c (EvalKey): add another bit to match scores in
	hash key.
	(fixes bug #9211 reported by Casey Hopkins)

Fri Jun  4 18:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gnubg.c: Add show scoresheet command (to right click menu)

Wed Jun  2 9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkboard.c: Add undo right click menu

Thu May 27 19:05:49 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseMatMove): fix logic for calculating
	resignations.
	(reported by Joachim Matussek)

Tur May 20 15:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.*: Remove memory leaks

Tue May 18 15:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.*: Minor changes to parser

Tue May 18 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c, render.c: Several small fixes to board appearance options

Wed May 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* boards.xml, gtkprefs.c, render.c+.h, renderprefs.c: